--- a/gugu/bootstrap-i1.html
+++ b/gugu/bootstrap-i1.html
@@ -16,82 +16,82 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-        <div class="col-lg-4">
-        Se ia aŭto­ri­tata centra in­sti­tu­cio trovos, ke tiu aŭ alia vor­to aŭ re­gu­lo en nia lin­gvo es­tas tro ne­opor­tu­na, ĝi ne de­v­os for­igi aŭ ŝan­ĝi la dir­itan for­mon, sed ĝi pov­os pro­poni for­mon nov­an, kiun ĝi re­ko­men­d­os uzadi pa­ra­le­le kun la for­mo mal­nova.	
+            <div class="col-lg-4">
+                <p>Se ia aŭto­ri­tata centra in­sti­tu­cio trovos, ke tiu aŭ alia vor­to aŭ re­gu­lo en nia lin­gvo es­tas tro ne­opor­tu­na, ĝi ne de­v­os for­igi aŭ ŝan­ĝi la dir­itan for­mon, sed ĝi pov­os pro­poni for­mon nov­an, kiun ĝi re­ko­men­d­os uzadi pa­ra­le­le kun la for­mo mal­nova.</p>
+            </div>
+            <div class="col-lg-4">
+                <p>Kun la tem­po la for­mo no­va iom post iom el­puŝ­os la for­mon mal­novan, kiu far­iĝos ar­ĥa­ismo, kiel ni tion ĉi vid­as en ĉiu na­tu­ra lin­gvo.</p>
+            </div>
+            <div class="col-lg-4">
+                <p>Sed, pre­zent­ante par­ton de la fun­da­men­to, tiuj ĉi ar­ĥa­ismoj neniam est­os el­ĵet­itaj, sed ĉiam est­os pres­ataj en ĉiuj lerno­lib­roj kaj vort­aroj sam­tem­pe kun la for­moj nov­aj, kaj tia­ma­ni­e­re ni havos la cert­econ, ke eĉ ĉe la plej gran­da per­fek­t­iĝ­ado la unu­eco de Es­pe­r­an­to neniam est­os romp­ata kaj neniu ver­ko Es­pe­r­an­ta eĉ el la plej frua tem­po iam per­dos sian va­lor­on kaj kom­pre­n­eb­l­ec­on por la est­ontaj ge­ne­ra­cioj.</p>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Lorem ipsum dolor sit amet, sed diam nonummy nibh euismod tinciduntut laoreet dolore magna aliquam erat volutpat.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <p>Se ia aŭto­ri­tata centra in­sti­tu­cio trovos, ke tiu aŭ alia vor­to aŭ re­gu­lo en nia lin­gvo es­tas tro ne­opor­tu­na, ĝi ne de­v­os for­igi aŭ ŝan­ĝi la dir­itan for­mon, sed ĝi pov­os pro­poni for­mon nov­an, kiun ĝi re­ko­men­d­os uzadi pa­ra­le­le kun la for­mo mal­nova.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Kun la tem­po la for­mo no­va iom post iom el­puŝ­os la for­mon mal­novan, kiu far­iĝos ar­ĥa­ismo, kiel ni tion ĉi vid­as en ĉiu na­tu­ra lin­gvo.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Sed, pre­zent­ante par­ton de la fun­da­men­to, tiuj ĉi ar­ĥa­ismoj neniam est­os el­ĵet­itaj, sed ĉiam est­os pres­ataj en ĉiuj lerno­lib­roj kaj vort­aroj sam­tem­pe kun la for­moj nov­aj, kaj tia­ma­ni­e­re ni havos la cert­econ, ke eĉ ĉe la plej gran­da per­fek­t­iĝ­ado la unu­eco de Es­pe­r­an­to neniam est­os romp­ata kaj neniu ver­ko Es­pe­r­an­ta eĉ el la plej frua tem­po iam per­dos sian va­lor­on kaj kom­pre­n­eb­l­ec­on por la est­ontaj ge­ne­ra­cioj.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Lorem ipsum dolor sit amet, sed diam nonummy nibh euismod tinciduntut laoreet dolore magna aliquam erat volutpat.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <p>Se ia aŭto­ri­tata centra in­sti­tu­cio trovos, ke tiu aŭ alia vor­to aŭ re­gu­lo en nia lin­gvo es­tas tro ne­opor­tu­na, ĝi ne de­v­os for­igi aŭ ŝan­ĝi la dir­itan for­mon, sed ĝi pov­os pro­poni for­mon nov­an, kiun ĝi re­ko­men­d­os uzadi pa­ra­le­le kun la for­mo mal­nova.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Kun la tem­po la for­mo no­va iom post iom el­puŝ­os la for­mon mal­novan, kiu far­iĝos ar­ĥa­ismo, kiel ni tion ĉi vid­as en ĉiu na­tu­ra lin­gvo.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Sed, pre­zent­ante par­ton de la fun­da­men­to, tiuj ĉi ar­ĥa­ismoj neniam est­os el­ĵet­itaj, sed ĉiam est­os pres­ataj en ĉiuj lerno­lib­roj kaj vort­aroj sam­tem­pe kun la for­moj nov­aj, kaj tia­ma­ni­e­re ni havos la cert­econ, ke eĉ ĉe la plej gran­da per­fek­t­iĝ­ado la unu­eco de Es­pe­r­an­to neniam est­os romp­ata kaj neniu ver­ko Es­pe­r­an­ta eĉ el la plej frua tem­po iam per­dos sian va­lor­on kaj kom­pre­n­eb­l­ec­on por la est­ontaj ge­ne­ra­cioj.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Lorem ipsum dolor sit amet, sed diam nonummy nibh euismod tinciduntut laoreet dolore magna aliquam erat volutpat.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <p>Se ia aŭto­ri­tata centra in­sti­tu­cio trovos, ke tiu aŭ alia vor­to aŭ re­gu­lo en nia lin­gvo es­tas tro ne­opor­tu­na, ĝi ne de­v­os for­igi aŭ ŝan­ĝi la dir­itan for­mon, sed ĝi pov­os pro­poni for­mon nov­an, kiun ĝi re­ko­men­d­os uzadi pa­ra­le­le kun la for­mo mal­nova.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Kun la tem­po la for­mo no­va iom post iom el­puŝ­os la for­mon mal­novan, kiu far­iĝos ar­ĥa­ismo, kiel ni tion ĉi vid­as en ĉiu na­tu­ra lin­gvo.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Sed, pre­zent­ante par­ton de la fun­da­men­to, tiuj ĉi ar­ĥa­ismoj neniam est­os el­ĵet­itaj, sed ĉiam est­os pres­ataj en ĉiuj lerno­lib­roj kaj vort­aroj sam­tem­pe kun la for­moj nov­aj, kaj tia­ma­ni­e­re ni havos la cert­econ, ke eĉ ĉe la plej gran­da per­fek­t­iĝ­ado la unu­eco de Es­pe­r­an­to neniam est­os romp­ata kaj neniu ver­ko Es­pe­r­an­ta eĉ el la plej frua tem­po iam per­dos sian va­lor­on kaj kom­pre­n­eb­l­ec­on por la est­ontaj ge­ne­ra­cioj.</p>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-4">
-         Kun la tem­po la for­mo no­va iom post iom el­puŝ­os la for­mon mal­novan, kiu far­iĝos ar­ĥa­ismo, kiel ni tion ĉi vid­as en ĉiu na­tu­ra lin­gvo.	
-        </div>
-         <div class="col-lg-4">
-         Sed, pre­zent­ante par­ton de la fun­da­men­to, tiuj ĉi ar­ĥa­ismoj neniam est­os el­ĵet­itaj, sed ĉiam est­os pres­ataj en ĉiuj lerno­lib­roj kaj vort­aroj sam­tem­pe kun la for­moj nov­aj, kaj tia­ma­ni­e­re ni havos la cert­econ, ke eĉ ĉe la plej gran­da per­fek­t­iĝ­ado la unu­eco de Es­pe­r­an­to neniam est­os romp­ata kaj neniu ver­ko Es­pe­r­an­ta eĉ el la plej frua tem­po iam per­dos sian va­lor­on kaj kom­pre­n­eb­l­ec­on por la est­ontaj ge­ne­ra­cioj.	
-        </div>
-        <div class="row">
-         <div class="col-lg-4">
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.	
-        </div>
-         <div class="col-lg-4">
-         	Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-        </div>
-         <div class="col-lg-4">
-         	Lorem ipsum dolor sit amet, sed diam nonummy nibh euismod tinciduntut laoreet dolore magna aliquam erat volutpat.
-        </div>	
-        </div>
-        <div class="row">
-         <div class="col-lg-4">
-         Se ia aŭto­ri­tata centra in­sti­tu­cio trovos, ke tiu aŭ alia vor­to aŭ re­gu­lo en nia lin­gvo es­tas tro ne­opor­tu­na, ĝi ne de­v­os for­igi aŭ ŝan­ĝi la dir­itan for­mon, sed ĝi pov­os pro­poni for­mon nov­an, kiun ĝi re­ko­men­d­os uzadi pa­ra­le­le kun la for­mo mal­nova.	
-         </div>
-         <div class="col-lg-4">
-          Kun la tem­po la for­mo no­va iom post iom el­puŝ­os la for­mon mal­novan, kiu far­iĝos ar­ĥa­ismo, kiel ni tion ĉi vid­as en ĉiu na­tu­ra lin­gvo.	
-         </div>
-          <div class="col-lg-4">
-          Sed, pre­zent­ante par­ton de la fun­da­men­to, tiuj ĉi ar­ĥa­ismoj neniam est­os el­ĵet­itaj, sed ĉiam est­os pres­ataj en ĉiuj lerno­lib­roj kaj vort­aroj sam­tem­pe kun la for­moj nov­aj, kaj tia­ma­ni­e­re ni havos la cert­econ, ke eĉ ĉe la plej gran­da per­fek­t­iĝ­ado la unu­eco de Es­pe­r­an­to neniam est­os romp­ata kaj neniu ver­ko Es­pe­r­an­ta eĉ el la plej frua tem­po iam per­dos sian va­lor­on kaj kom­pre­n­eb­l­ec­on por la est­ontaj ge­ne­ra­cioj.	
-         </div>	
-        </div>
-        <div class="row">
-         <div class="col-lg-4">
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.	
-        </div>
-         <div class="col-lg-4">
-         	Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-        </div>
-         <div class="col-lg-4">
-         	Lorem ipsum dolor sit amet, sed diam nonummy nibh euismod tinciduntut laoreet dolore magna aliquam erat volutpat.
-        </div>	
-        </div>
-        <div class="row">
-         <div class="col-lg-4">
-         Se ia aŭto­ri­tata centra in­sti­tu­cio trovos, ke tiu aŭ alia vor­to aŭ re­gu­lo en nia lin­gvo es­tas tro ne­opor­tu­na, ĝi ne de­v­os for­igi aŭ ŝan­ĝi la dir­itan for­mon, sed ĝi pov­os pro­poni for­mon nov­an, kiun ĝi re­ko­men­d­os uzadi pa­ra­le­le kun la for­mo mal­nova.	
-         </div>
-         <div class="col-lg-4">
-          Kun la tem­po la for­mo no­va iom post iom el­puŝ­os la for­mon mal­novan, kiu far­iĝos ar­ĥa­ismo, kiel ni tion ĉi vid­as en ĉiu na­tu­ra lin­gvo.	
-         </div>
-          <div class="col-lg-4">
-          Sed, pre­zent­ante par­ton de la fun­da­men­to, tiuj ĉi ar­ĥa­ismoj neniam est­os el­ĵet­itaj, sed ĉiam est­os pres­ataj en ĉiuj lerno­lib­roj kaj vort­aroj sam­tem­pe kun la for­moj nov­aj, kaj tia­ma­ni­e­re ni havos la cert­econ, ke eĉ ĉe la plej gran­da per­fek­t­iĝ­ado la unu­eco de Es­pe­r­an­to neniam est­os romp­ata kaj neniu ver­ko Es­pe­r­an­ta eĉ el la plej frua tem­po iam per­dos sian va­lor­on kaj kom­pre­n­eb­l­ec­on por la est­ontaj ge­ne­ra­cioj.	
-         </div>	
-        </div>
-        <div class="row">
-         <div class="col-lg-4">
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.	
-        </div>
-         <div class="col-lg-4">
-         	Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-        </div>
-         <div class="col-lg-4">
-         	Lorem ipsum dolor sit amet, sed diam nonummy nibh euismod tinciduntut laoreet dolore magna aliquam erat volutpat.
-        </div>	
-        </div>
-        <div class="row">
-        <div class="col-lg-4">
-        Se ia aŭto­ri­tata centra in­sti­tu­cio trovos, ke tiu aŭ alia vor­to aŭ re­gu­lo en nia lin­gvo es­tas tro ne­opor­tu­na, ĝi ne de­v­os for­igi aŭ ŝan­ĝi la dir­itan for­mon, sed ĝi pov­os pro­poni for­mon nov­an, kiun ĝi re­ko­men­d­os uzadi pa­ra­le­le kun la for­mo mal­nova.	
-        </div>
-        <div class="col-lg-4">
-         Kun la tem­po la for­mo no­va iom post iom el­puŝ­os la for­mon mal­novan, kiu far­iĝos ar­ĥa­ismo, kiel ni tion ĉi vid­as en ĉiu na­tu­ra lin­gvo.	
-        </div>
-         <div class="col-lg-4">
-         Sed, pre­zent­ante par­ton de la fun­da­men­to, tiuj ĉi ar­ĥa­ismoj neniam est­os el­ĵet­itaj, sed ĉiam est­os pres­ataj en ĉiuj lerno­lib­roj kaj vort­aroj sam­tem­pe kun la for­moj nov­aj, kaj tia­ma­ni­e­re ni havos la cert­econ, ke eĉ ĉe la plej gran­da per­fek­t­iĝ­ado la unu­eco de Es­pe­r­an­to neniam est­os romp­ata kaj neniu ver­ko Es­pe­r­an­ta eĉ el la plej frua tem­po iam per­dos sian va­lor­on kaj kom­pre­n­eb­l­ec­on por la est­ontaj ge­ne­ra­cioj.	
-        </div>	
-        </div>
-    </div>
 </body>
 
 </html>
