--- a/gugu/proto.html
+++ b/gugu/proto.html
@@ -2,9 +2,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">	
-<link rel='stylesheet'	href='/bootstrap-3.3.7-dist/css/bootstrap.min.css'/>
-<link rel='stylesheet'	href='/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css'/>
-<link rel='stylesheet'	href='/bootstrap-3.3.7-dist/js/bootstrap.min.js'/>
+<link rel='stylesheet'	href='bootstrap-3.3.7-dist/css/bootstrap.min.css'/>
+<link rel='stylesheet'	href='bootstrap-3.3.7-dist/css/bootstrap-theme.min.css'/>
+<script src='bootstrap-3.3.7-dist/js/bootstrap.min.js'></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
